--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -14,7 +14,9 @@ jobs:
     steps:
       - uses: actions/checkout@v3
       - name: Build and test
-        run: yarn build
+        run: |
+          yarn
+          yarn build
   test:
     runs-on: ubuntu-latest
     needs: build
