--- a/action.yml
+++ b/action.yml
@@ -19,3 +19,6 @@ inputs:
     description: Whether the content is richtext
     required: true
     default: true
+runs:
+  using: 'node18'
+  main: 'dist/index.js'
