--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   },
   "dependencies": {
     "@actions/core": "^1.10.0",
-    "@atproto/api": "^0.4.3"
+    "@atproto/api": "^0.4.3",
+    "node-fetch": "^3.3.2"
   }
 }
