--- a/action.yml
+++ b/action.yml
@@ -5,7 +5,7 @@ inputs:
   service:
     description: Atprotol service
     required: true
-    default: 'https://bsky.app'
+    default: 'https://bsky.social'
   identifier:
     description: Atprotol handle or email
     required: true
