--- a/action.yml
+++ b/action.yml
@@ -1,8 +1,9 @@
 name: ATProto Action
 description: Use ATProtocol on your workflow
 author: comfuture
-icon: at-sign
-color: blue
+branding:
+  icon: at-sign
+  color: blue
 inputs:
   service:
     description: Atprotol service
